--- a/NCBCallJ/bin/configuration/app.config
+++ b/NCBCallJ/bin/configuration/app.config
@@ -11,12 +11,14 @@
   "endPoint": {
     "getFlexTransInfoById": {
       "url": "https://ibmbdev.ncb-bank.vn/esbuat7800/flexCashService/v1/getFlexTransInfoById",
-      "templateFile": "java/template/getFlexTransInfoById.json",
+      "templateFile": "java/template/getFlexTransInfoByIdReq.json",
+      "templateFileResponse":"getFlexTransInfoByIdRes.json",
       "method": "POST"
     },
     "nopRutTienNHNN": {
       "url": "https://ibmbdev.ncb-bank.vn/esbuat7800/flexCashService/v1/nopRutTienNHNN",
-      "templateFile": "java/template/nopRutTienNHNN.json",
+      "templateFile": "java/template/nopRutTienNHNNReq.json",
+      "templateFileResponse":"nopRutTienNHNNReqRes.json",
       "method": "POST"
     }
   }
