--- a/NCBCallJ/java/configuration/app.config
+++ b/NCBCallJ/java/configuration/app.config
@@ -12,13 +12,13 @@
     "getFlexTransInfoById": {
       "url": "https://ibmbdev.ncb-bank.vn/esbuat7800/flexCashService/v1/getFlexTransInfoById",
       "templateFile": "java/template/getFlexTransInfoByIdReq.json",
-      "templateFileResponse":"getFlexTransInfoByIdRes.json",
+      "templateFileResponse":"java/template/getFlexTransInfoByIdRes.txt",
       "method": "POST"
     },
     "nopRutTienNHNN": {
       "url": "https://ibmbdev.ncb-bank.vn/esbuat7800/flexCashService/v1/nopRutTienNHNN",
       "templateFile": "java/template/nopRutTienNHNNReq.json",
-      "templateFileResponse":"nopRutTienNHNNReqRes.json",
+      "templateFileResponse":"java/template/nopRutTienNHNNRes.txt",
       "method": "POST"
     }
   }
