commit before change configreader

--- a/NCBCallJ/bin/configuration/app.config
+++ b/NCBCallJ/bin/configuration/app.config
@@ -2,7 +2,7 @@
   "connection": {
     "esb": {
       "sourceAppID": "MB",
-      "targetAppIDs": "T24",
+      "targetAppIDs": "IZI",
       "userID": "MB",
       "userPassword": "RUJBTksxMjM=",
       "serviceVersion": "1"
@@ -13,12 +13,34 @@
       "url": "https://ibmbdev.ncb-bank.vn/esbuat7800/flexCashService/v1/getFlexTransInfoById",
       "templateFile": "java/template/getFlexTransInfoByIdReq.json",
       "templateFileResponse":"java/template/getFlexTransInfoByIdRes.txt",
-      "method": "POST"
+      "method": "POST",
+      "esb": {
+        "sourceAppID": "MB",
+        "targetAppIDs": "T24",
+        "userDetail": {
+          "userID": "MB",
+          "userPassword": "RUJBTksxMjM="
+        }
+      }
     },
     "nopRutTienNHNN": {
       "url": "https://ibmbdev.ncb-bank.vn/esbuat7800/flexCashService/v1/nopRutTienNHNN",
       "templateFile": "java/template/nopRutTienNHNNReq.json",
       "templateFileResponse":"java/template/nopRutTienNHNNRes.txt",
+      "method": "POST",
+      "esb": {
+        "sourceAppID": "MB",
+        "targetAppIDs": "T24",
+        "userDetail": {
+          "userID": "MB",
+          "userPassword": "RUJBTksxMjM="
+        }
+      }
+    },
+    "trangThaiAnChi": {
+      "url": "https://ibmbdev.ncb-bank.vn/esbuat7800/flexCashRestService/v1/trangThaiAnChi",
+      "templateFile": "java/template/trangThaiAnChiReq.json",
+      "templateFileResponse":"java/template/trangThaiAnChiRes.txt",
       "method": "POST"
     }
   }
