--- a/NCBCallJ/bin/configuration/app.config
+++ b/NCBCallJ/bin/configuration/app.config
@@ -16,11 +16,10 @@
       "method": "POST",
       "esb": {
         "sourceAppID": "MB",
-        "targetAppIDs": "T24",
-        "userDetail": {
-          "userID": "MB",
-          "userPassword": "RUJBTksxMjM="
-        }
+        "targetAppIDs": "IZI",
+        "userID": "MB",
+        "userPassword": "RUJBTksxMjM=",
+        "serviceVersion": "1"
       }
     },
     "nopRutTienNHNN": {
@@ -30,18 +29,30 @@
       "method": "POST",
       "esb": {
         "sourceAppID": "MB",
-        "targetAppIDs": "T24",
-        "userDetail": {
-          "userID": "MB",
-          "userPassword": "RUJBTksxMjM="
+        "targetAppIDs": "IZI",
+        "userID": "MB",
+        "userPassword": "RUJBTksxMjM=",
+        "serviceVersion": "1"
         }
-      }
-    },
-    "trangThaiAnChi": {
-      "url": "https://ibmbdev.ncb-bank.vn/esbuat7800/flexCashRestService/v1/trangThaiAnChi",
-      "templateFile": "java/template/trangThaiAnChiReq.json",
-      "templateFileResponse":"java/template/trangThaiAnChiRes.txt",
-      "method": "POST"
-    }
+      },
+      "trangThaiAnChi": {
+        "url": "https://ibmbdev.ncb-bank.vn/esbuat7800/flexCashRestService/v1/trangThaiAnChi",
+        "templateFile": "java/template/trangThaiAnChiReq.json",
+        "templateFileResponse":"java/template/trangThaiAnChiRes.txt",
+        "method": "POST"
+      },
+    "getCustomerInfoById": {
+      "url": "https://ibmbdev.ncb-bank.vn/esbuat7800/flexCashService/v1/getCustomerInfoById",
+      "templateFile": "java/template/getCustomerInfoByIdReq.json",
+      "templateFileResponse":"java/template/getCustomerInfoByIdRes.txt",
+      "method": "POST",
+      "esb": {
+        "sourceAppID": "MB",
+        "targetAppIDs": "T24",
+        "userID": "MB",
+        "userPassword": "RUJBTksxMjM=",
+        "serviceVersion": "1"
+        }
+      }  
   }
 }
