commit release new config reader

--- a/NCBCallJ/bin/configuration/app.config
+++ b/NCBCallJ/bin/configuration/app.config
@@ -1,58 +1,82 @@
 {
   "connection": {
-    "esb": {
-      "sourceAppID": "MB",
-      "targetAppIDs": "IZI",
-      "userID": "MB",
-      "userPassword": "RUJBTksxMjM=",
-      "serviceVersion": "1"
+      "esbHeader":{
+        "common": {
+            "serviceVersion": "1"
+        },
+        "client": {
+            "sourceAppID": "MB",
+            "targetAppIDs": "T24",
+            "userDetail": {
+                "userID": "MB",
+                "userPassword": "RUJBTksxMjM="
+            }
+        }
     }
   },
   "endPoint": {
-    "getFlexTransInfoById": {
-      "url": "https://ibmbdev.ncb-bank.vn/esbuat7800/flexCashService/v1/getFlexTransInfoById",
-      "templateFile": "java/template/getFlexTransInfoByIdReq.json",
-      "templateFileResponse":"java/template/getFlexTransInfoByIdRes.txt",
-      "method": "POST",
-      "esb": {
-        "sourceAppID": "MB",
-        "targetAppIDs": "IZI",
-        "userID": "MB",
-        "userPassword": "RUJBTksxMjM=",
-        "serviceVersion": "1"
-      }
-    },
-    "nopRutTienNHNN": {
-      "url": "https://ibmbdev.ncb-bank.vn/esbuat7800/flexCashService/v1/nopRutTienNHNN",
-      "templateFile": "java/template/nopRutTienNHNNReq.json",
-      "templateFileResponse":"java/template/nopRutTienNHNNRes.txt",
-      "method": "POST",
-      "esb": {
-        "sourceAppID": "MB",
-        "targetAppIDs": "IZI",
-        "userID": "MB",
-        "userPassword": "RUJBTksxMjM=",
-        "serviceVersion": "1"
+      "getFlexTransInfoById": {
+          "url": "https://ibmbdev.ncb-bank.vn/esbuat7800/flexCashService/v1/getFlexTransInfoById",
+          "templateFile": "java/template/getFlexTransInfoByIdReq.json",
+          "templateFileResponse": "java/template/getFlexTransInfoByIdRes.txt",
+          "method": "POST",
+          "esbHeader": {
+            "common": {
+                "serviceVersion": "1"
+            },
+            "client": {
+                "sourceAppID": "MB",
+                "targetAppIDs": "T24",
+                "userDetail": {
+                    "userID": "MB",
+                    "userPassword": "RUJBTksxMjM="
+                }
+            }
         }
+      },
+      "nopRutTienNHNN": {
+          "url": "https://ibmbdev.ncb-bank.vn/esbuat7800/flexCashService/v1/nopRutTienNHNN",
+          "templateFile": "java/template/nopRutTienNHNNReq.json",
+          "templateFileResponse": "java/template/nopRutTienNHNNRes.txt",
+          "method": "POST",
+          "esbHeader": {
+              "common": {
+                  "serviceVersion": "1"
+              },
+              "client": {
+                  "sourceAppID": "MB",
+                  "targetAppIDs": "T24",
+                  "userDetail": {
+                      "userID": "MB",
+                      "userPassword": "RUJBTksxMjM="
+                  }
+              }
+          }
       },
       "trangThaiAnChi": {
-        "url": "https://ibmbdev.ncb-bank.vn/esbuat7800/flexCashRestService/v1/trangThaiAnChi",
-        "templateFile": "java/template/trangThaiAnChiReq.json",
-        "templateFileResponse":"java/template/trangThaiAnChiRes.txt",
-        "method": "POST"
+          "url": "https://ibmbdev.ncb-bank.vn/esbuat7800/flexCashRestService/v1/trangThaiAnChi",
+          "templateFile": "java/template/trangThaiAnChiReq.json",
+          "templateFileResponse": "java/template/trangThaiAnChiRes.txt",
+          "method": "POST"
       },
-    "getCustomerInfoById": {
-      "url": "https://ibmbdev.ncb-bank.vn/esbuat7800/flexCashService/v1/getCustomerInfoById",
-      "templateFile": "java/template/getCustomerInfoByIdReq.json",
-      "templateFileResponse":"java/template/getCustomerInfoByIdRes.txt",
-      "method": "POST",
-      "esb": {
-        "sourceAppID": "MB",
-        "targetAppIDs": "T24",
-        "userID": "MB",
-        "userPassword": "RUJBTksxMjM=",
-        "serviceVersion": "1"
-        }
-      }  
+      "getCustomerInfoById": {
+          "url": "https://ibmbdev.ncb-bank.vn/esbuat7800/flexCashService/v1/getCustomerInfoById",
+          "templateFile": "java/template/getCustomerInfoByIdReq.json",
+          "templateFileResponse": "java/template/getCustomerInfoByIdRes.txt",
+          "method": "POST",
+          "esbHeader": {
+              "common": {
+                  "serviceVersion": "1"
+              },
+              "client": {
+                  "sourceAppID": "MB",
+                  "targetAppIDs": "T24",
+                  "userDetail": {
+                      "userID": "MB",
+                      "userPassword": "RUJBTksxMjM="
+                  }
+              }
+          }
+      }
   }
 }
